# medlens

./: .gitignore  README.md
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
backend/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/core/: deps.py  s3.py  security.py
backend/app/graphql/: schema.py  types.py
backend/app/models/: __init__.py  medication_log.py  prescription.py  user.py
backend/app/routers/: analytics.py  auth.py  logs.py  ml.py  users.py
backend/app/schemas/: analytics.py  auth.py  log.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_admins.py  test_analytics.py  test_auth.py  test_logs.py  test_users.py
backend/tests/unit/: test_analytics_helpers.py  test_security.py
dashboard/: .env.development  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: client.ts  mock.ts
dashboard/src/components/: AdherenceChart.tsx  AdminRoute.tsx  ConfirmDialog.tsx  Layout.tsx  Pagination.tsx  PatientModal.tsx  PatientTable.tsx  ProtectedRoute.tsx  ScanBarChart.tsx  Sidebar.tsx  StatCard.tsx
dashboard/src/hooks/: useAdmins.ts  useAuth.ts  useOverview.ts  usePatientDetail.ts  usePatients.ts
dashboard/src/pages/: AdminsPage.tsx  LoginPage.tsx  OverviewPage.tsx  PatientDetailPage.tsx  PatientsPage.tsx  (+2 more)
mobile/: App.tsx  app.json  package.json  tsconfig.json
(+15 files in other folders)
